Fixed alignment of outputs

--- a/idcard.css
+++ b/idcard.css
@@ -27,23 +27,24 @@ img{
 }
 #postFullName{
   font-family: monospace;
-  font-size: 35px;
-  text-align: right;
+  font-size: 25px;
   padding-right: 75px;
   margin-top: 25px;
+  text-align: center;
+  padding-bottom: 20px;
 }
 #postAge{
   font-family: monospace;
-  margin-left: 7px;
+  margin-left: 10px;
   font-size: 20px;
 }
 #postPhoneNumber{
   font-family: monospace;
-  margin-left: 7px;
+  margin-left: 10px;
   font-size: 20px;
 }
 #postAddress{
   font-family: monospace;
-  margin-left: 7px;
+  margin-left: 10px;
   font-size: 20px;
 }
